<?xml version="1.0"?>
<package format="3">
  <name>ur3e_tutorials</name>
  <version>0.0.0</version>
  <description>The ur3e_tutorials package</description>

  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>